// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic.vue format 1`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<template>
  <p v-if="isFolder(file)">{{ (   file as   mymodule.Folder    ).deadline }}</p>
</template>

<script lang="ts"></script>

=====================================output=====================================
<template>
  <p v-if="isFolder(file)">{{ (file as mymodule.Folder).deadline }}</p>
</template>

<script lang="ts"></script>

================================================================================
`;

exports[`not-working-with-non-ts-script.vue format 1`] = `
====================================options=====================================
parsers: ["vue"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<template>
  <p v-if="isFolder(file)">{{ (   file as   mymodule.Folder    ).deadline }}</p>
</template>

<script></script>

=====================================output=====================================
<template>
  <p v-if="isFolder(file)">{{ (   file as   mymodule.Folder    ).deadline }}</p>
</template>

<script></script>

================================================================================
`;
